@@ -16,6 +16,7 @@
 - option for autolocking the file after a period of inactivity
 - sorting of the tree
 - display filtering
+- bugfix: add ellipsis to all required menu items
 
 0.5.x:
 - remove support for version 0 data files
